deploy/k8s/base/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app.kubernetes.io/part-of: ecommerce
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-infra
  labels:
    app.kubernetes.io/part-of: ecommerce-infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/part-of: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: monitoring
